--- a/front/src/locales/en.json
+++ b/front/src/locales/en.json
@@ -111,6 +111,6 @@
 	},
 	"gamesPage": {
 		"pongSubtitle": "The original arcade legend. Pure reflex gaming.",
-		"breakerSubtitle": "Break through the chaos. Precision meets destruction."
+		"snakeSubtitle": "Neon-lit retro action. Survive the grid, grow the glow."
 	}
 }
