--- a/front/src/locales/es.json
+++ b/front/src/locales/es.json
@@ -111,6 +111,6 @@
 	},
 	"gamesPage": {
 		"pongSubtitle": "La leyenda arcade original. Juego de reflejos puros.",
-		"breakerSubtitle": "Rompe el caos. La precisión se encuentra con la destrucción."
+		"snakeSubtitle": "Acción retro en neón. Sobrevive a la cuadrícula, haz crecer el brillo."
 	}
 }
