--- a/front/src/locales/fr.json
+++ b/front/src/locales/fr.json
@@ -111,6 +111,6 @@
 	},
 	"gamesPage": {
 		"pongSubtitle": "La légende arcade originale. Pur jeu de réflexes.",
-		"breakerSubtitle": "Brisez le chaos. La précision rencontre la destruction."
+		"snakeSubtitle": "Action rétro sous les néons. Survivez à la grille, faites grandir la lumière."
 	}
 }
